updated lit review

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "alsogirhtm",
         "bandlimited",
         "Chebyshev",
+        "eigenbasis",
         "IGFT",
         "multiway"
     ],
