--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "isoperimetric",
         "missingness",
         "multiway",
+        "MWGSP",
         "Sandryhaila",
         "spatiotemporally",
         "strided",
